storybook-html: fix breaking changes resulting from migration
https://github.com/storybookjs/storybook/issues/11255

--- a/packages/storybook-html/package.json
+++ b/packages/storybook-html/package.json
@@ -23,6 +23,7 @@
     "@storybook/addon-viewport": "^6.0.10",
     "@storybook/html": "^6.0.10",
     "babel-loader": "^8.0.6",
+    "core-js": "^3.0.1",
     "fibers": "^4.0.2",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
