--- a/packages/storybook-html/package.json
+++ b/packages/storybook-html/package.json
@@ -53,6 +53,7 @@
     "@uq-uidf/pagination": "^0.0.0",
     "@uq-uidf/pane": "^0.0.0",
     "@uq-uidf/previous-next": "^0.0.0",
+    "@uq-uidf/progression": "^0.0.0",
     "@uq-uidf/sections": "^0.0.0",
     "@uq-uidf/site-header": "^0.0.0",
     "@uq-uidf/site-title-utility": "^0.0.0",
