--- a/packages/storybook-html/package.json
+++ b/packages/storybook-html/package.json
@@ -58,6 +58,7 @@
     "@uq-uidf/site-header": "^0.0.0",
     "@uq-uidf/site-title-utility": "^0.0.0",
     "@uq-uidf/tabs": "^0.0.0",
+    "@uq-uidf/typography": "^0.0.0",
     "font-awesome": "^4.7.0",
     "joi-browser": "^13.4.0",
     "underscore": "^1.10.2",
