--- a/packages/storybook-html/package.json
+++ b/packages/storybook-html/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "storybook": "start-storybook -p 6006",
+    "storybook-docs": "start-storybook --docs -p 6007",
     "build-storybook": "build-storybook -c .storybook -o .out"
   },
   "keywords": [],
