--- a/packages/alert/package.json
+++ b/packages/alert/package.json
@@ -39,12 +39,10 @@
   },
   "dependencies": {
     "@uq-uidf/core": "^0.0.0",
-    "@uq-uidf/foundation-global": "^0.0.0",
-    "@uq-uidf/foundation-grid": "^0.0.0"
+    "@uq-uidf/foundation-global": "^0.0.0"
   },
   "peerDependencies": {
     "@uq-uidf/core": "^0.0.0",
-    "@uq-uidf/foundation-global": "^0.0.0",
-    "@uq-uidf/foundation-grid": "^0.0.0"
+    "@uq-uidf/foundation-global": "^0.0.0"
   }
 }
