--- a/packages/card/package.json
+++ b/packages/card/package.json
@@ -40,12 +40,10 @@
   "dependencies": {
     "@uq-uidf/core": "^0.0.0",
     "@uq-uidf/foundation-global": "^0.0.0",
-    "@uq-uidf/foundation-grid": "^0.0.0",
     "font-awesome": "^4.7.0"
   },
   "peerDependencies": {
     "@uq-uidf/core": "^0.0.0",
-    "@uq-uidf/foundation-global": "^0.0.0",
-    "@uq-uidf/foundation-grid": "^0.0.0"
+    "@uq-uidf/foundation-global": "^0.0.0"
   }
 }
