--- a/packages/private-design-output/package.json
+++ b/packages/private-design-output/package.json
@@ -55,8 +55,8 @@
     "@uq-uidf/form": "^0.0.0",
     "@uq-uidf/foundation-block-grid": "^0.0.0",
     "@uq-uidf/foundation-global": "^0.0.0",
-    "@uq-uidf/foundation-grid": "^0.0.0",
     "@uq-uidf/foundation-misc": "^0.0.0",
+    "@uq-uidf/grid": "^0.0.0",
     "@uq-uidf/grid-menu": "^0.0.0",
     "@uq-uidf/header": "^0.0.0",
     "@uq-uidf/icon": "^0.0.0",
