--- a/packages/private-design-output/package.json
+++ b/packages/private-design-output/package.json
@@ -43,29 +43,29 @@
     "vinyl-source-stream": "^2.0.0"
   },
   "dependencies": {
-    "@uq-uidf/accordion": "^0.0.0",
-    "@uq-uidf/alert": "^0.0.0",
-    "@uq-uidf/blockquote": "^0.0.0",
-    "@uq-uidf/body": "^0.0.0",
-    "@uq-uidf/breadcrumb": "^0.0.0",
-    "@uq-uidf/button": "^0.0.0",
-    "@uq-uidf/card": "^0.0.0",
-    "@uq-uidf/core": "^0.0.0",
-    "@uq-uidf/footer": "^0.0.0",
-    "@uq-uidf/form": "^0.0.0",
-    "@uq-uidf/foundation-block-grid": "^0.0.0",
-    "@uq-uidf/foundation-global": "^0.0.0",
-    "@uq-uidf/foundation-misc": "^0.0.0",
-    "@uq-uidf/grid": "^0.0.0",
-    "@uq-uidf/grid-menu": "^0.0.0",
-    "@uq-uidf/header": "^0.0.0",
-    "@uq-uidf/icon": "^0.0.0",
-    "@uq-uidf/lists": "^0.0.0",
-    "@uq-uidf/pane": "^0.0.0",
-    "@uq-uidf/sections": "^0.0.0",
-    "@uq-uidf/site-header": "^0.0.0",
-    "@uq-uidf/table": "^0.0.0",
-    "@uq-uidf/tabs": "^0.0.0",
+    "@uqds/accordion": "^0.0.0",
+    "@uqds/alert": "^0.0.0",
+    "@uqds/blockquote": "^0.0.0",
+    "@uqds/body": "^0.0.0",
+    "@uqds/breadcrumb": "^0.0.0",
+    "@uqds/button": "^0.0.0",
+    "@uqds/card": "^0.0.0",
+    "@uqds/core": "^0.0.0",
+    "@uqds/footer": "^0.0.0",
+    "@uqds/form": "^0.0.0",
+    "@uqds/foundation-block-grid": "^0.0.0",
+    "@uqds/foundation-global": "^0.0.0",
+    "@uqds/foundation-misc": "^0.0.0",
+    "@uqds/grid": "^0.0.0",
+    "@uqds/grid-menu": "^0.0.0",
+    "@uqds/header": "^0.0.0",
+    "@uqds/icon": "^0.0.0",
+    "@uqds/lists": "^0.0.0",
+    "@uqds/pane": "^0.0.0",
+    "@uqds/sections": "^0.0.0",
+    "@uqds/site-header": "^0.0.0",
+    "@uqds/table": "^0.0.0",
+    "@uqds/tabs": "^0.0.0",
     "font-awesome": "^4.7.0"
   }
 }
