--- a/packages/sections/package.json
+++ b/packages/sections/package.json
@@ -37,11 +37,11 @@
     "url": "https://github.com/uq-its-ss/user-interface-development-framework/issues"
   },
   "dependencies": {
-    "@uq-uidf/core": "^0.0.0",
-    "@uq-uidf/foundation-global": "^0.0.0"
+    "@uqds/core": "^0.0.0",
+    "@uqds/foundation-global": "^0.0.0"
   },
   "peerDependencies": {
-    "@uq-uidf/core": "^0.0.0",
-    "@uq-uidf/foundation-global": "^0.0.0"
+    "@uqds/core": "^0.0.0",
+    "@uqds/foundation-global": "^0.0.0"
   }
 }
