Removed foundation & FA dependency, used CSS Grid

--- a/packages/grid-menu/package.json
+++ b/packages/grid-menu/package.json
@@ -38,14 +38,9 @@
     "url": "https://github.com/uq-its-ss/design-system/issues"
   },
   "dependencies": {
-    "@uqds/core": "^0.0.0",
-    "@uqds/foundation-block-grid": "^0.0.0",
-    "@uqds/foundation-global": "^0.0.0",
-    "font-awesome": "^4.7.0"
+    "@uqds/core": "^0.0.0"
   },
   "peerDependencies": {
-    "@uqds/core": "^0.0.0",
-    "@uqds/foundation-block-grid": "^0.0.0",
-    "@uqds/foundation-global": "^0.0.0"
+    "@uqds/core": "^0.0.0"
   }
 }
