alert: remove foundation-global dependency

--- a/packages/alert/package.json
+++ b/packages/alert/package.json
@@ -38,12 +38,6 @@
   },
   "dependencies": {
     "@uqds/core": "^0.0.0",
-    "@uqds/grid": "^0.0.0",
-    "@uqds/foundation-global": "^0.0.0"
-  },
-  "peerDependencies": {
-    "@uqds/core": "^0.0.0",
-    "@uqds/grid": "^0.0.0",
-    "@uqds/foundation-global": "^0.0.0"
+    "@uqds/grid": "^0.0.0"
   }
 }
