form: remove foundation-global dependency

--- a/packages/form/package.json
+++ b/packages/form/package.json
@@ -38,11 +38,7 @@
   },
   "dependencies": {
     "@uqds/core": "^0.0.0",
-    "@uqds/foundation-global": "^0.0.0",
+    "@uqds/grid": "^0.0.0",
     "font-awesome": "^4.7.0"
-  },
-  "peerDependencies": {
-    "@uqds/core": "^0.0.0",
-    "@uqds/foundation-global": "^0.0.0"
   }
 }
