--- a/packages/page-header/package.json
+++ b/packages/page-header/package.json
@@ -37,11 +37,6 @@
     "url": "https://github.com/uq-its-ss/design-system/issues"
   },
   "dependencies": {
-    "@uqds/core": "^0.0.0",
-    "@uqds/foundation-global": "^0.0.0"
-  },
-  "peerDependencies": {
-    "@uqds/core": "^0.0.0",
-    "@uqds/foundation-global": "^0.0.0"
+    "@uqds/core": "^0.0.0"
   }
 }
