storybook-html: initial working table of contents (toc) for docs

--- a/packages/storybook-html/package.json
+++ b/packages/storybook-html/package.json
@@ -23,13 +23,6 @@
     "@storybook/addon-docs": "^6.0.27",
     "@storybook/addon-viewport": "^6.0.27",
     "@storybook/html": "^6.0.27",
-    "babel-loader": "^8.0.6",
-    "core-js": "^3.0.1",
-    "fibers": "^4.0.2",
-    "sass": "^1.27.0",
-    "sass-loader": "^8.0.2",
-    "ts-loader": "^6.2.1",
-    "typescript": "^3.8.2",
     "@uqds/accordion": "^0.0.0",
     "@uqds/alert": "^0.0.0",
     "@uqds/blockquote": "^0.0.0",
@@ -54,8 +47,16 @@
     "@uqds/site-header": "^0.0.0",
     "@uqds/table": "^0.0.0",
     "@uqds/tabs": "^0.0.0",
+    "babel-loader": "^8.0.6",
+    "core-js": "^3.0.1",
+    "fibers": "^4.0.2",
     "font-awesome": "^4.7.0",
     "joi-browser": "^13.4.0",
+    "sass": "^1.27.0",
+    "sass-loader": "^8.0.2",
+    "tocbot": "^4.12.0",
+    "ts-loader": "^6.2.1",
+    "typescript": "^3.8.2",
     "underscore": "^1.10.2",
     "zxcvbn": "^4.4.2"
   }
