--- a/packages/storybook-html/package.json
+++ b/packages/storybook-html/package.json
@@ -19,10 +19,12 @@
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.7.2",
+    "@storybook/addons": "^6.0.27",
     "@storybook/addon-backgrounds": "^6.0.27",
     "@storybook/addon-docs": "^6.0.27",
     "@storybook/addon-viewport": "^6.0.27",
     "@storybook/html": "^6.0.27",
+    "@storybook/theming": "^6.0.27",
     "@uqds/accordion": "^0.0.0",
     "@uqds/alert": "^0.0.0",
     "@uqds/blockquote": "^0.0.0",
