--- a/packages/app-maps/package.json
+++ b/packages/app-maps/package.json
@@ -38,6 +38,7 @@
     "url": "https://github.com/uq-its-ss/design-system/issues"
   },
   "dependencies": {
+    "@material/circular-progress": "^8.0.0",
     "@uqds/core": "^0.0.0"
   },
   "devDependencies": {
