--- a/packages/storybook-html/package.json
+++ b/packages/storybook-html/package.json
@@ -19,14 +19,16 @@
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.7.2",
-    "@storybook/addons": "^6.1.10",
+    "@material/circular-progress": "^8.0.0",
     "@storybook/addon-backgrounds": "^6.1.10",
     "@storybook/addon-docs": "^6.1.10",
     "@storybook/addon-viewport": "^6.1.10",
+    "@storybook/addons": "^6.1.10",
     "@storybook/html": "^6.1.10",
     "@storybook/theming": "^6.1.10",
     "@uqds/accordion": "^0.0.0",
     "@uqds/alert": "^0.0.0",
+    "@uqds/app-maps": "^0.0.0",
     "@uqds/blockquote": "^0.0.0",
     "@uqds/body": "^0.0.0",
     "@uqds/breadcrumb": "^0.0.0",
