--- a/packages/storybook-html/package.json
+++ b/packages/storybook-html/package.json
@@ -57,6 +57,7 @@
     "fibers": "^4.0.2",
     "font-awesome": "^4.7.0",
     "joi-browser": "^13.4.0",
+    "mermaid": "^8.8.4",
     "sass": "^1.27.0",
     "sass-loader": "^8.0.2",
     "tocbot": "^4.12.0",
