WIP: migrating base styles

--- a/packages/storybook-html/package.json
+++ b/packages/storybook-html/package.json
@@ -40,6 +40,7 @@
     "@uqds/grid": "^0.0.0",
     "@uqds/grid-menu": "^0.0.0",
     "@uqds/header": "^0.0.0",
+    "@uqds/hero": "^0.0.0",
     "@uqds/icon": "^0.0.0",
     "@uqds/lists": "^0.0.0",
     "@uqds/page-header": "^0.0.0",
