--- a/packages/app-maps/package.json
+++ b/packages/app-maps/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@uqds/app-maps",
-  "version": "1.0.0",
+  "version": "0.0.0",
   "description": "Application stylesheets for UQ Maps",
   "keywords": [
     "uqds",
@@ -41,8 +41,8 @@
   },
   "dependencies": {
     "@material/circular-progress": "^8.0.0",
-    "@uqds/body": "^1.0.0",
-    "@uqds/core": "^1.0.0"
+    "@uqds/core": "^0.0.0",
+    "@uqds/body": "^0.0.0"
   },
   "devDependencies": {
     "@svgdotjs/svg.js": "^3.0.16",
