--- a/packages/grid-menu/package.json
+++ b/packages/grid-menu/package.json
@@ -38,9 +38,7 @@
     "url": "https://github.com/uq-its-ss/design-system/issues"
   },
   "dependencies": {
-    "@uqds/core": "^0.0.0"
-  },
-  "peerDependencies": {
-    "@uqds/core": "^0.0.0"
+    "@uqds/core": "^0.0.0",
+    "@uqds/icon": "^0.0.0"
   }
 }
