accordion and others: remove domready as dependency
Also changed misleading JS module src file name

--- a/packages/accordion/package.json
+++ b/packages/accordion/package.json
@@ -38,7 +38,6 @@
     "url": "https://github.com/uq-its-ss/design-system/issues"
   },
   "dependencies": {
-    "@uqds/core": "^0.0.0",
-    "domready": "^1.0.8"
+    "@uqds/core": "^0.0.0"
   }
 }
