--- a/packages/app-maps/package.json
+++ b/packages/app-maps/package.json
@@ -2,6 +2,7 @@
   "name": "@uqds/app-maps",
   "version": "0.0.0",
   "description": "Application stylesheets for UQ Maps",
+  "private": true,
   "keywords": [
     "uqds",
     "uq",
