--- a/packages/card/package.json
+++ b/packages/card/package.json
@@ -20,24 +20,19 @@
   "homepage": "https://github.com/uq-its-ss/design-system#readme",
   "license": "ISC",
   "directories": {
-    "lib": "lib"
+    "lib": "src"
   },
   "files": [
-    "lib/*",
     "src/*"
   ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/uq-its-ss/design-system.git"
   },
-  "scripts": {
-    "test": "echo \"Error: run tests from root\" && exit 1"
-  },
   "bugs": {
     "url": "https://github.com/uq-its-ss/design-system/issues"
   },
   "dependencies": {
-    "@uqds/core": "^0.0.0",
-    "font-awesome": "^4.7.0"
+    "@uqds/core": "^0.0.0"
   }
 }
