--- a/packages/private-design-output/package.json
+++ b/packages/private-design-output/package.json
@@ -37,7 +37,7 @@
     "gulp-rename": "^2.0.0",
     "gulp-sass": "^4.1.0",
     "gulp-uglify": "^3.0.2",
-    "rollup": "^2.10.9",
+    "rollup": "^2.40.0",
     "sass": "^1.27.0",
     "vinyl-buffer": "^1.0.1",
     "vinyl-source-stream": "^2.0.0"
@@ -63,7 +63,6 @@
     "@uqds/side-nav": "^0.0.0",
     "@uqds/site-header": "^0.0.0",
     "@uqds/table": "^0.0.0",
-    "@uqds/tabs": "^0.0.0",
-    "font-awesome": "^4.7.0"
+    "@uqds/tabs": "^0.0.0"
   }
 }
