--- a/packages/progression/package.json
+++ b/packages/progression/package.json
@@ -21,26 +21,19 @@
   "homepage": "https://github.com/uqds/design-system#readme",
   "license": "ISC",
   "directories": {
-    "lib": "lib"
+    "lib": "src"
   },
   "files": [
-    "lib/*",
     "src/*"
   ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/uq-its-ss/design-system.git"
   },
-  "scripts": {
-    "test": "echo \"Error: run tests from root\" && exit 1"
-  },
   "bugs": {
     "url": "https://github.com/uqds/design-system/issues"
   },
   "dependencies": {
-    "@uqds/core": "^0.0.0"
-  },
-  "peerDependencies": {
     "@uqds/core": "^0.0.0"
   }
 }
