--- a/lerna.json
+++ b/lerna.json
@@ -1,10 +1,5 @@
 {
     "version": "0.0.0",
     "npmClient": "npm",
-    "packages": ["packages/*"],
-    "command": {
-        "publish": {
-            "registry": "http://localhost:4873"
-        }
-    }
+    "packages": ["packages/*"]
 }
