--- a/packages/accordion/package.json
+++ b/packages/accordion/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@uqds/accordion",
-  "version": "0.0.0",
+  "version": "0.0.1-alpha.0",
   "description": "Accordion component",
   "keywords": [
     "uqds",
@@ -37,6 +37,6 @@
     "url": "https://github.com/uq-its-ss/design-system/issues"
   },
   "dependencies": {
-    "@uqds/core": "^0.0.0"
+    "@uqds/core": "^0.0.1-alpha.0"
   }
 }
