--- a/packages/form/package.json
+++ b/packages/form/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@uqds/form",
-  "version": "0.0.0",
+  "version": "0.0.1-alpha.0",
   "description": "Form element style rules",
   "keywords": [
     "uqds",
@@ -38,7 +38,7 @@
     "url": "https://github.com/uq-its-ss/design-system/issues"
   },
   "dependencies": {
-    "@uqds/core": "^0.0.0"
+    "@uqds/core": "^0.0.1-alpha.0"
   },
   "devDependencies": {
     "@svgdotjs/svg.js": "^3.0.16",
