--- a/packages/previous-next/package.json
+++ b/packages/previous-next/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@uqds/previous-next",
-  "version": "0.0.0",
+  "version": "0.0.1-alpha.0",
   "description": "Previous Next component",
   "keywords": [
     "uqds",
@@ -34,6 +34,6 @@
     "url": "https://github.com/uq-its-ss/design-system/issues"
   },
   "dependencies": {
-    "@uqds/core": "^0.0.0"
+    "@uqds/core": "^0.0.1-alpha.0"
   }
 }
