--- a/packages/private-design-output/package.json
+++ b/packages/private-design-output/package.json
@@ -34,8 +34,8 @@
     "gulp": "^4.0.2",
     "gulp-babel": "^8.0.0",
     "gulp-concat": "^2.6.1",
+    "gulp-dart-sass": "^1.0.2",
     "gulp-rename": "^2.0.0",
-    "gulp-sass": "^4.1.0",
     "gulp-uglify": "^3.0.2",
     "rollup": "^2.40.0",
     "sass": "^1.27.0",
