Add missing dependency info to packages requiring icons

--- a/packages/header/package.json
+++ b/packages/header/package.json
@@ -34,6 +34,7 @@
   },
   "dependencies": {
     "@uqds/core": "^0.0.2-alpha.0",
-    "@uqds/grid": "^0.0.2-alpha.0"
+    "@uqds/grid": "^0.0.2-alpha.0",
+    "@uqds/icon": "^0.0.2-alpha.0"
   }
 }
