--- a/packages/accordion/package.json
+++ b/packages/accordion/package.json
@@ -37,6 +37,7 @@
     "url": "https://github.com/uq-its-ss/design-system/issues"
   },
   "dependencies": {
-    "@uqds/core": "^0.0.2-alpha.0"
+    "@uqds/core": "^0.0.2-alpha.0",
+    "@uqds/icon": "^0.0.2-alpha.0"
   }
 }
