--- a/packages/side-nav/package.json
+++ b/packages/side-nav/package.json
@@ -33,6 +33,7 @@
     "url": "https://github.com/uq-its-ss/design-system/issues"
   },
   "dependencies": {
-    "@uqds/core": "^0.0.2-alpha.0"
+    "@uqds/core": "^0.0.2-alpha.0",
+    "@uqds/icon": "^0.0.2-alpha.0"
   }
 }
