storybook-html: update storybook and package-lock file

--- a/packages/storybook-html/package.json
+++ b/packages/storybook-html/package.json
@@ -1,31 +1,28 @@
 {
-  "name": "storybook-html",
-  "version": "0.0.2-alpha.0",
-  "description": "Storybook for HTML instance for uqds component development",
-  "private": true,
-  "main": "index.js",
+	"name": "storybook-html",
+	"version": "0.0.2-alpha.0",
+	"description": "Storybook for HTML instance for uqds component development",
+	"private": true,
+	"main": "index.js",
+	"keywords": [],
+	"author": {
+		"name": "University of Queensland",
+		"email": "webservices@uq.edu.au",
+		"url": "https://uq.edu.au"
+	},
+	"license": "ISC",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "storybook": "start-storybook -s ./public -p 6006",
-    "storybook-docs": "start-storybook --docs -p 6007",
     "build-storybook": "build-storybook -c .storybook -s ./public -o .out"
   },
-  "keywords": [],
-  "author": {
-    "name": "University of Queensland",
-    "email": "webservices@uq.edu.au",
-    "url": "https://uq.edu.au"
-  },
-  "license": "ISC",
-  "devDependencies": {
-    "@babel/core": "^7.7.2",
-    "@material/circular-progress": "^8.0.0",
-    "@storybook/addon-backgrounds": "^6.1.20",
-    "@storybook/addon-docs": "^6.1.20",
-    "@storybook/addon-viewport": "^6.1.20",
-    "@storybook/addons": "^6.1.20",
-    "@storybook/html": "^6.1.20",
-    "@storybook/theming": "^6.1.20",
+	"devDependencies": {
+		"@babel/core": "^7.7.2",
+		"@material/circular-progress": "^8.0.0",
+		"@storybook/addon-a11y": "^6.2.9",
+		"@storybook/addon-essentials": "^6.2.9",
+		"@storybook/addons": "^6.2.9",
+		"@storybook/html": "^6.2.9",
+		"@storybook/theming": "^6.2.9",
     "@uqds/accordion": "^0.0.2-alpha.0",
     "@uqds/alert": "^0.0.2-alpha.0",
     "@uqds/app-maps": "^0.0.2-alpha.0",
@@ -53,18 +50,18 @@
     "@uqds/site-header": "^0.0.2-alpha.0",
     "@uqds/table": "^0.0.2-alpha.0",
     "@uqds/tabs": "^0.0.2-alpha.0",
-    "babel-loader": "^8.0.6",
-    "core-js": "^3.0.1",
-    "fibers": "^4.0.2",
-    "font-awesome": "^4.7.0",
-    "joi-browser": "^13.4.0",
-    "mermaid": "^8.8.4",
-    "sass": "^1.27.0",
-    "sass-loader": "^8.0.2",
-    "tocbot": "^4.12.0",
-    "ts-loader": "^6.2.1",
-    "typescript": "^3.8.2",
-    "underscore": "^1.10.2",
-    "zxcvbn": "^4.4.2"
-  }
+		"babel-loader": "^8.0.6",
+		"core-js": "^3.0.1",
+		"fibers": "^4.0.2",
+		"font-awesome": "^4.7.0",
+		"joi-browser": "^13.4.0",
+		"mermaid": "^8.8.4",
+		"sass": "^1.27.0",
+		"sass-loader": "^8.0.2",
+		"tocbot": "^4.12.0",
+		"ts-loader": "^6.2.1",
+		"typescript": "^3.8.2",
+		"underscore": "^1.10.2",
+		"zxcvbn": "^4.4.2"
+	}
 }
