--- a/packages/storybook-html/package.json
+++ b/packages/storybook-html/package.json
@@ -40,6 +40,7 @@
 		"@uqds/hero": "^0.0.3-alpha.0",
 		"@uqds/icon": "^0.0.3-alpha.0",
 		"@uqds/lists": "^0.0.3-alpha.0",
+		"@uqds/loading-spinner": "^0.0.3-alpha.0",
 		"@uqds/page-header": "^0.0.3-alpha.0",
 		"@uqds/pagination": "^0.0.3-alpha.0",
 		"@uqds/pane": "^0.0.3-alpha.0",
