--- a/packages/private-design-output/package.json
+++ b/packages/private-design-output/package.json
@@ -56,6 +56,7 @@
     "@uqds/grid": "^0.0.3-alpha.0",
     "@uqds/grid-menu": "^0.0.3-alpha.0",
     "@uqds/header": "^0.0.3-alpha.0",
+    "@uqds/hero": "^0.0.3-alpha.0",
     "@uqds/icon": "^0.0.3-alpha.0",
     "@uqds/lists": "^0.0.3-alpha.0",
     "@uqds/pane": "^0.0.3-alpha.0",
