--- a/packages/private-design-output/package.json
+++ b/packages/private-design-output/package.json
@@ -61,6 +61,7 @@
     "@uqds/lists": "^0.0.3-alpha.0",
     "@uqds/pane": "^0.0.3-alpha.0",
     "@uqds/previous-next": "^0.0.3-alpha.0",
+    "@uqds/progression": "^0.0.3-alpha.0",
     "@uqds/sections": "^0.0.3-alpha.0",
     "@uqds/side-nav": "^0.0.3-alpha.0",
     "@uqds/site-header": "^0.0.3-alpha.0",
