--- a/packages/private-design-output/package.json
+++ b/packages/private-design-output/package.json
@@ -59,6 +59,8 @@
     "@uqds/hero": "^0.0.3-alpha.0",
     "@uqds/icon": "^0.0.3-alpha.0",
     "@uqds/lists": "^0.0.3-alpha.0",
+    "@uqds/loading-spinner": "^0.0.3-alpha.0",
+    "@uqds/pagination": "^0.0.3-alpha.0",
     "@uqds/pane": "^0.0.3-alpha.0",
     "@uqds/previous-next": "^0.0.3-alpha.0",
     "@uqds/progression": "^0.0.3-alpha.0",
