--- a/packages/private-design-output/package.json
+++ b/packages/private-design-output/package.json
@@ -51,7 +51,6 @@
     "@uqds/button": "^0.0.4-alpha.0",
     "@uqds/card": "^0.0.4-alpha.0",
     "@uqds/core": "^0.0.4-alpha.0",
-    "@uqds/footer": "^0.0.4-alpha.0",
     "@uqds/form": "^0.0.4-alpha.0",
     "@uqds/grid": "^0.0.4-alpha.0",
     "@uqds/grid-menu": "^0.0.4-alpha.0",
@@ -60,6 +59,7 @@
     "@uqds/icon": "^0.0.4-alpha.0",
     "@uqds/lists": "^0.0.4-alpha.0",
     "@uqds/loading-spinner": "^0.0.4-alpha.0",
+    "@uqds/new-footer": "^0.0.4-alpha.0",
     "@uqds/pagination": "^0.0.4-alpha.0",
     "@uqds/pane": "^0.0.4-alpha.0",
     "@uqds/previous-next": "^0.0.4-alpha.0",
