added initial header packages

--- a/packages/private-design-output/package.json
+++ b/packages/private-design-output/package.json
@@ -60,6 +60,7 @@
     "@uqds/lists": "^0.0.4-alpha.0",
     "@uqds/loading-spinner": "^0.0.4-alpha.0",
     "@uqds/new-footer": "^0.0.4-alpha.0",
+    "@uqds/new-header": "^0.0.4-alpha.0",
     "@uqds/pagination": "^0.0.4-alpha.0",
     "@uqds/pane": "^0.0.4-alpha.0",
     "@uqds/previous-next": "^0.0.4-alpha.0",
