--- a/packages/form/package.json
+++ b/packages/form/package.json
@@ -12,6 +12,9 @@
     "css",
     "form"
   ],
+  "publishConfig": {
+    "access": "public"
+  },
   "author": {
     "name": "University of Queensland",
     "email": "webservices@uq.edu.au",
