--- a/packages/previous-next/package.json
+++ b/packages/previous-next/package.json
@@ -13,6 +13,9 @@
     "navigation",
     "previous-next"
   ],
+  "publishConfig": {
+    "access": "public"
+  },
   "author": {
     "name": "University of Queensland",
     "email": "webservices@uq.edu.au",
