Minor update to package reference

--- a/packages/private-design-output/package.json
+++ b/packages/private-design-output/package.json
@@ -52,10 +52,12 @@
     "@uqds/card": "^0.0.5-alpha.0",
     "@uqds/core": "^0.0.5-alpha.0",
     "@uqds/footer": "^0.0.5-alpha.0",
+    "@uqds/new-footer": "^0.0.5-alpha.0",
     "@uqds/form": "^0.0.5-alpha.0",
     "@uqds/grid": "^0.0.5-alpha.0",
     "@uqds/grid-menu": "^0.0.5-alpha.0",
     "@uqds/header": "^0.0.5-alpha.0",
+    "@uqds/new-header": "^0.0.5-alpha.0",
     "@uqds/hero": "^0.0.5-alpha.0",
     "@uqds/icon": "^0.0.5-alpha.0",
     "@uqds/lists": "^0.0.5-alpha.0",
