--- a/packages/new-footer/package.json
+++ b/packages/new-footer/package.json
@@ -34,6 +34,7 @@
   },
   "dependencies": {
     "@uqds/core": "^0.0.5-alpha.0",
-    "@uqds/grid": "^0.0.5-alpha.0"
+    "@uqds/grid": "^0.0.5-alpha.0",
+    "@uqds/accordion": "^0.0.5-alpha.0"
   }
 }
