--- a/packages/storybook-html/package.json
+++ b/packages/storybook-html/package.json
@@ -33,6 +33,7 @@
 		"@uqds/card": "^0.0.5-alpha.0",
 		"@uqds/core": "^0.0.5-alpha.0",
 		"@uqds/footer": "^0.0.5-alpha.0",
+		"@uqds/new-footer": "^0.0.5-alpha.0",
 		"@uqds/form": "^0.0.5-alpha.0",
 		"@uqds/grid": "^0.0.5-alpha.0",
 		"@uqds/grid-menu": "^0.0.5-alpha.0",
