--- a/packages/footer/package.json
+++ b/packages/footer/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@uqds/new-header",
+  "name": "@uqds/footer",
   "version": "0.0.5-alpha.0",
-  "description": "The POC UQ Header component package",
+  "description": "The POC UQ footer component package",
   "keywords": [
     "uqds",
     "uq",
@@ -10,7 +10,7 @@
     "scss",
     "sass",
     "css",
-    "header"
+    "footer"
   ],
   "author": {
     "name": "University of Queensland",
@@ -34,6 +34,7 @@
   },
   "dependencies": {
     "@uqds/core": "^0.0.5-alpha.0",
-    "@uqds/grid": "^0.0.5-alpha.0"
+    "@uqds/grid": "^0.0.5-alpha.0",
+    "@uqds/accordion": "^0.0.5-alpha.0"
   }
 }
