--- a/packages/app-maps/package.json
+++ b/packages/app-maps/package.json
@@ -35,24 +35,15 @@
   "scripts": {
     "build-icons": "node scripts/build-icons.js",
     "build-css": "node scripts/build-css.js",
-    "build": "node scripts/build-icons.js && node scripts/build-css.js"
+    "build": "node scripts/build-icons.js && node scripts/build-css.js",
+    "prepare": "gulp -f ../../gulpfile.js --cwd=. prepare"
   },
   "bugs": {
     "url": "https://github.com/uq-its-ss/design-system/issues"
   },
   "dependencies": {
     "@material/circular-progress": "^8.0.0",
-    "@uqds/body": "^0.0.5-alpha.0",
-    "@uqds/core": "^0.0.5-alpha.0"
-  },
-  "devDependencies": {
-    "@svgdotjs/svg.js": "^3.0.16",
-    "chalk": "^4.1.0",
-    "glob": "^7.1.6",
-    "js-yaml": "^3.14.1",
-    "mini-svg-data-uri": "^1.2.3",
-    "sass": "^1.30.0",
-    "svgdom": "^0.1.8",
-    "svgo": "^1.3.2"
+    "@uqds/body": "file:../body",
+    "@uqds/core": "file:../core"
   }
 }
