--- a/packages/hero/package.json
+++ b/packages/hero/package.json
@@ -28,6 +28,9 @@
   "files": [
     "src/*"
   ],
+  "scripts": {
+    "prepare": "gulp -f ../../gulpfile.js --cwd=. prepare"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/uq-its-ss/design-system.git"
@@ -36,7 +39,7 @@
     "url": "https://github.com/uq-its-ss/design-system/issues"
   },
   "dependencies": {
-    "@uqds/core": "^0.0.5-alpha.0",
-    "@uqds/grid": "^0.0.5-alpha.0"
+    "@uqds/core": "file:../core",
+    "@uqds/grid": "file:../grid"
   }
 }
