--- a/packages/icon/package.json
+++ b/packages/icon/package.json
@@ -42,27 +42,13 @@
     "build-icons": "node dist/index.js",
     "clean": "npm run clean-ts && npm run clean-icons",
     "clean-ts": "rm -rf ./dist/*.js*",
-    "clean-icons": "rm -rf ./dist/images src/*/_build/*"
+    "clean-icons": "rm -rf ./dist/images src/*/_build/*",
+    "prepare": "gulp -f ../../gulpfile.js --cwd=. prepare"
   },
   "bugs": {
     "url": "https://github.com/uq-its-ss/design-system/issues"
   },
   "dependencies": {
-    "@uqds/core": "^0.0.5-alpha.0"
-  },
-  "devDependencies": {
-    "@svgdotjs/svg.js": "^3.1.2",
-    "@types/glob": "^7.2.0",
-    "@types/node": "^17.0.16",
-    "@types/svgo": "^2.6.0",
-    "@typescript-eslint/eslint-plugin": "^5.11.0",
-    "@typescript-eslint/parser": "^5.11.0",
-    "eslint": "^8.8.0",
-    "glob": "^7.2.0",
-    "mini-svg-data-uri": "^1.4.3",
-    "prettier": "^2.5.1",
-    "svgdom": "^0.1.10",
-    "svgo": "^2.8.0",
-    "typescript": "^4.5.5"
+    "@uqds/core": "file:../core"
   }
 }
