--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "private": true,
   "devDependencies": {
     "@babel/core": "^7.17.9",
+    "@babel/plugin-proposal-class-properties": "^7.16.7",
+    "@babel/preset-env": "^7.16.11",
     "@rollup/plugin-commonjs": "^21.1.0",
     "@rollup/plugin-node-resolve": "^13.2.1",
     "@rollup/stream": "^2.0.0",
