--- a/packages/alert/package.json
+++ b/packages/alert/package.json
@@ -41,6 +41,7 @@
   },
   "dependencies": {
     "@uqds/core": "^0.0.5-alpha.0",
-    "@uqds/grid": "^0.0.5-alpha.0"
+    "@uqds/grid": "^0.0.5-alpha.0",
+    "@uqds/icon": "^0.0.5-alpha.0"
   }
 }
