--- a/packages/form/package.json
+++ b/packages/form/package.json
@@ -42,7 +42,8 @@
     "url": "https://github.com/uq-its-ss/design-system/issues"
   },
   "dependencies": {
-    "@uqds/core": "^0.0.5-alpha.0"
+    "@uqds/core": "^0.0.5-alpha.0",
+    "@uqds/icon": "^0.0.5-alpha.0"
   },
   "devDependencies": {
     "@svgdotjs/svg.js": "^3.0.16",
