--- a/packages/header/package.json
+++ b/packages/header/package.json
@@ -41,6 +41,10 @@
   "dependencies": {
     "@uqds/core": "^0.0.5-alpha.0",
     "@uqds/grid": "^0.0.5-alpha.0",
-    "@uqds/icon": "^0.0.5-alpha.0"
+    "@uqds/icon": "^0.0.5-alpha.0",
+    "@uqds/form": "^0.0.5-alpha.0"
+  },
+  "devDependencies": {
+    "gulp": "^4.0.2"
   }
 }
