--- a/packages/sections/package.json
+++ b/packages/sections/package.json
@@ -39,6 +39,7 @@
     "url": "https://github.com/uq-its-ss/design-system/issues"
   },
   "dependencies": {
-    "@uqds/core": "^0.0.5-alpha.0"
+    "@uqds/core": "^0.0.5-alpha.0",
+    "@uqds/grid": "^0.0.5-alpha.0"
   }
 }
