--- a/packages/private-design-output/package.json
+++ b/packages/private-design-output/package.json
@@ -15,8 +15,7 @@
     "url": "git+https://github.com/uq-its-ss/design-system.git"
   },
   "scripts": {
-    "test": "echo \"Error: run tests from root\" && exit 1",
-    "prepare": "gulp -f ../../gulpfile.js --cwd=. prepare"
+    "test": "echo \"Error: run tests from root\" && exit 1"
   },
   "bugs": {
     "url": "https://github.com/uq-its-ss/design-system/issues"
