Revert "Revert "Packaged artifacts""

--- a/packages/app-maps/package.json
+++ b/packages/app-maps/package.json
@@ -35,7 +35,8 @@
   "scripts": {
     "build-icons": "node scripts/build-icons.js",
     "build-css": "node scripts/build-css.js",
-    "build": "node scripts/build-icons.js && node scripts/build-css.js"
+    "build": "node scripts/build-icons.js && node scripts/build-css.js",
+    "prepare": "gulp -f ../../gulpfile.js --cwd=. prepare"
   },
   "bugs": {
     "url": "https://github.com/uq-its-ss/design-system/issues"
