--- a/packages/blockquote/package.json
+++ b/packages/blockquote/package.json
@@ -25,6 +25,9 @@
   "directories": {
     "lib": "src"
   },
+  "scripts": {
+    "prepare": "gulp -f ../../gulpfile.js --cwd=. prepare"
+  },
   "files": [
     "src/*"
   ],
