--- a/packages/grid-menu/package.json
+++ b/packages/grid-menu/package.json
@@ -29,6 +29,9 @@
   "files": [
     "src/*"
   ],
+  "scripts": {
+    "prepare": "gulp -f ../../gulpfile.js --cwd=. prepare"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/uq-its-ss/design-system.git"
