Add dist to distributed packages

--- a/packages/blockquote/package.json
+++ b/packages/blockquote/package.json
@@ -29,7 +29,7 @@
     "prepare": "gulp -f ../../gulpfile.js --cwd=. prepare"
   },
   "files": [
-    "src/*"
+    "src/*", "dist/*"
   ],
   "repository": {
     "type": "git",
