--- a/packages/pane/package.json
+++ b/packages/pane/package.json
@@ -26,7 +26,7 @@
     "lib": "src"
   },
   "files": [
-    "src/*"
+    "src/*", "dist/*"
   ],
   "scripts": {
     "prepare": "gulp -f ../../gulpfile.js --cwd=. prepare"
