--- a/packages/progression/package.json
+++ b/packages/progression/package.json
@@ -27,7 +27,7 @@
     "lib": "src"
   },
   "files": [
-    "src/*"
+    "src/*", "dist/*"
   ],
   "scripts": {
     "prepare": "gulp -f ../../gulpfile.js --cwd=. prepare"
