add git linting

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -28,8 +28,8 @@ jobs:
         with:
           useLockFile: false
 
-#      - name: 🧹 Linting
-#        run: npm run lint
+      - name: 🧹 Linting
+        run: npm run lint
 
       - name: ✅ Tests
         run: npm run test
