--- a/regconfig.json
+++ b/regconfig.json
@@ -18,6 +18,7 @@
     },
     "reg-publish-s3-plugin": {
       "bucketName": "uq-ds-regsuit"
-    }
+    },
+    "reg-keygen-git-hash-plugin": {}
   }
 }
