--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "reg-keygen-git-hash-plugin": "^0.12.1",
     "reg-notify-github-with-api-plugin": "^0.12.1",
     "reg-publish-s3-plugin": "^0.12.1",
+    "reg-simple-keygen-plugin": "^0.12.1",
     "reg-suit": "^0.12.1",
     "rollup": "^2.70.2",
     "stylelint": "^14.9.1",
