--- a/.github/workflows/reg.yml
+++ b/.github/workflows/reg.yml
@@ -24,11 +24,8 @@ jobs:
         npm install --pure-lockfile
       env:
         CI: true
-    - name: Serve Storybook and run tests
-      run: |
-        npx concurrently -k -s first -n "SB,TEST" -c "magenta,blue" \
-          "npx http-server storybook-static --port 6006 --silent" \
-          "npx wait-on tcp:6006 && yarn test-storybook"
+      - name: Build Storybook
+        run: npx build-storybook --quiet
     - name: workaround for detached HEAD
       run: |
         git checkout ${GITHUB_REF#refs/heads/} || git checkout -b ${GITHUB_REF#refs/heads/} && git pull
